Skip table name if physical table is non-existing, use the new tableNames API in migration

Summary:
BUG:392112
FIXED-IN:3.2.0

Note: functionality of migration is not affected, it's just the code cleanup thanks to the new API.

Test Plan: Open kdb.git/autotests/data/missingTableTest.kexi, it should not list persons table anymore.

Reviewers: piggz

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D11549

# Conflicts:
#	CMakeLists.txt